# MIPT-Bank

./: .gitignore  CMakeLists.txt  README.md  big_int.cpp  build.gradle  credit.cpp  credit.h  debit.cpp  debit.h  deposit.cpp  deposit.h  ibill.cpp  ibill.h  impney_operation.cpp  impney_operation.h  main.cpp  package-lock.json  package.json  persok.cpp  persok.h  person.cpp  person.h  person_builder.cpp  person_builder.h  person_director.cpp  person_director.h  refil.cpp  refil.h  transfer.cpp  transfer.h  withdrawal.cpp  withdrawal.h
MIPT_bank_app/: settings.gradle
MIPT_bank_app/app/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: circle.xml  ic_time_54.xml  logo.xml  no_andles_trans.xml  no_angles.xml  no_angles_button.xml  no_angles_selector.xml  no_angles_text_view.xml
app/src/main/res/font/: jost_medium.xml
app/src/main/res/layout/: activity_main.xml  alert_dialog.xml  fragment_account.xml  fragment_dashboard.xml  fragment_get_credit.xml  fragment_get_debit.xml  fragment_get_deposit.xml  fragment_home.xml  fragment_notifications.xml  fragment_pin_code.xml  fragment_refill.xml  fragment_registration.xml  (+4 more)
front_end/: package-lock.json  package.json  scripts.js
front_end/public/: index.html  manifest.json
front_end/src/: App.css  App.js  Sign_menu.css  index.css  index.js
front_end/src/Components/: Carousel.js  Header.js
front_end/src/Pages/: About.js  Account.css  Account.js  Blog.js  Contacts.js  Home.css  Home.js  Operations.css  Receive_all.css  Receive_credit.js  Receive_deposit.js  Recieve_debit.js  Replenish.js  Sign_in.css  Sign_in.js  Sign_in_form.js  Sign_up.css  Sign_up.js  Sign_up_form.js  Withdraw.js
front_end/src/fonts/: .part
front_end/src/sign_in_classes/: Button.js  My_text_button_panel.js  sign_in_menu.js
gradle/wrapper/: gradle-wrapper.properties
include/: bill_factory.h  credit.h  deposit.h  person_director.h
src/: CMakeLists.txt  big_int.cpp  bill.cpp  bill_db.cpp  bill_factory.cpp  credit.cpp  debit.cpp  deposit.cpp  imoney_operation.cpp  person.cpp  person_builder.cpp  person_db.cpp  person_director.cpp  refil.cpp  refill.cpp  transfer.cpp  withdrawal.cpp
src/include/: big_int.h  bill.h  bill_db.h  bill_factory.h  credit.h  debit.h  deposit.h  ibill.h  imoney_operation.h  impney_operation.h  iperson.h  iperson_builder.h  iperson_director.h  person.h  person_builder.h  person_db.h  person_director.h  refil.h  refill.h  transfer.h  withdrawal.h
(+227 files in other folders)
